updates add phone

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Bright Wings Global is a premier HR consulting and recruitment agency, specializing in hiring top talent for IT companies, IT services, KPOs, BPOs, and remote call center roles. We connect skilled professionals with leading employers worldwide." />
         <meta name="author" content="" />
         <title>Bright Wings Global consulting and talent pool</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/brightwingsglobal-logo.jpeg" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -23,6 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
                 <a class="navbar-brand fw-bold" href="#page-top">Bright Wings Global Consulting</a>
+                <a class="navbar-brand" href="tel:+14844017872"><i class="bi-headset icon-feature-title"></i>4844017872</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
