social platforms added

--- a/index.html
+++ b/index.html
@@ -197,12 +197,14 @@
         <footer class="bg-black text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2">&copy; brightwingsconsulting.com 2025. All Rights Reserved.</div>
-                    <a href="#!">Privacy</a>
+                    <div class="mb-2">&copy;brightwingsglobal.com 2025. All Rights Reserved.</div>
+                    <!-- <a href="#!">Privacy</a>
                     <span class="mx-1">&middot;</span>
-                    <a href="#!">Terms</a>
+                    <a href="#!">Terms</a> -->
                     <span class="mx-1">&middot;</span>
-                    <a href="#!">FAQ</a>
+                    <a href="https://www.linkedin.com/in/brightwings-global-6a0ab1360/">LinkedIn</a>
+                    <span class="mx-1">&middot;</span>
+                    <a href="https://youtube.com/@brightwings-j8b?si=F1VnMWJrPOV_yy8E" target="_blank">Youtube</a>
                 </div>
             </div>
         </footer>
